--- a/Config/DefaultInput.ini
+++ b/Config/DefaultInput.ini
@@ -38,7 +38,7 @@ bCaptureMouseOnLaunch=True
 DefaultViewportMouseCaptureMode=CapturePermanently_IncludingInitialMouseDown
 bDefaultViewportMouseLock=False
 DefaultViewportMouseLockMode=LockOnCapture
-+ActionMappings=(ActionName="ToggleMultiply",Key=SpaceBar,bShift=False,bCtrl=False,bAlt=False,bCmd=False)
++ActionMappings=(ActionName="Click",Key=LeftMouseButton,bShift=False,bCtrl=False,bAlt=False,bCmd=False)
 +AxisMappings=(AxisName="MoveForward",Key=W,Scale=1.000000)
 +AxisMappings=(AxisName="MoveRight",Key=A,Scale=-1.000000)
 +AxisMappings=(AxisName="Turn",Key=MouseX,Scale=1.000000)
